fix white space right side

--- a/tattowebsite/static/css/main.css
+++ b/tattowebsite/static/css/main.css
@@ -4,6 +4,7 @@ body{
 	background-color:white;
 	font-family: "Microsoft Yahei", sans-serif;
 	font-weight: lighter;
+	overflow-x: hidden; 
 
 }
 
